package com.gymbro.utils;

/**
 * The type Constants.
 */
public class Constants{

    private Constants(){}

    /**
     * The constant SCREEN_WIDTH.
     */
//* Screen setups
    public static final int SCREEN_WIDTH = 840;
    /**
     * The constant SCREEN_HEIGHT.
     */
    public static final int SCREEN_HEIGHT = 960;
    /**
     * The constant SCREEN_TITLE.
     */
    public static final String SCREEN_TITLE = "GymBro";
    /**
     * The constant SCREEN_RESIZABLE.
     */
    public static final boolean SCREEN_RESIZABLE = false;


    /**
     * The constant LABLE_LAYOUT_X.
     */
//* Labels
    public static final double LABLE_LAYOUT_X = 50;
    /**
     * The constant LABLE_LAYOUT_Y.
     */
    public static final double LABLE_LAYOUT_Y = 50;
    /**
     * The constant LABLE_FONT_TYPE.
     */
    public static final String LABLE_FONT_TYPE = "Consolas";
    /**
     * The constant LABLE_FONT_SIZE.
     */
    public static final double LABLE_FONT_SIZE = 25;

    //* Identifiers

    /**
     * The constant ID_GYM_MENU_PANE.
     */
// TODO:: append "_PANE" or "_EVENT" to names of these constants
    public static final String ID_GYM_MENU_PANE = "GYM_MENU_PANE";
    /**
     * The constant ID_MAP_PANE.
     */
    public static final String ID_MAP_PANE = "MAP_PANE";
    /**
     * The constant ID_MAIN_MENU_PANE.
     */
    public static final String ID_MAIN_MENU_PANE = "MAIN_MENU_PANE";
    /**
     * The constant ID_PROPERTY_REMOVE_ON_ESCAPE_EVENT.
     */
    public static final String ID_PROPERTY_REMOVE_ON_ESCAPE_EVENT = "PROPERTY_MENU_REMOVE_ON_ESCAPE_EVENT";
    /**
     * The constant ID_BACK_TO_MAIN_MENU_EVENT.
     */
    public static final String ID_BACK_TO_MAIN_MENU_EVENT = "BACK_TO_MAIN_MENU_EVENT";
    /**
     * The constant ID_FAVORITES_MENU_PANE.
     */
    public static final String ID_FAVORITES_MENU_PANE = "FAVORITES_MENU_PANE";




    // TODO:: Remove unused constants

    /**
     * The constant MOUSE_OFFSET_X.
     */
    public static final double MOUSE_OFFSET_X = 420.0;
    /**
     * The constant MOUSE_OFFSET_Y.
     */
    public static final double MOUSE_OFFSET_Y = 480.0;
    /**
     * The constant BUTTON_OFFSET_X.
     */
    public static final int BUTTON_OFFSET_X = 400;
    /**
     * The constant BUTTON_OFFSET_Y.
     */
    public static final int BUTTON_OFFSET_Y = 560;
    /**
     * The constant BUTTON_SPACING_HZ.
     */
    public static final  int BUTTON_SPACING_HZ = 10;
    /**
     * The constant BUTTON_SPACING_VT.
     */
    public static final int BUTTON_SPACING_VT = 5;
    /**
     * The constant BUTTON_HEIGHT.
     */
    public static final int BUTTON_HEIGHT = 60;
    /**
     * The constant BUTTON_WIDTH.
     */
    public static final int BUTTON_WIDTH = 60;
    /**
     * The constant TAB_WIDTH.
     */
    public static final int TAB_WIDTH = 75;
    /**
     * The constant TAB_HEIGHT.
     */
    public static final int TAB_HEIGHT = 38;
    /**
     * The constant TAB_OFFSET_X.
     */
    public static final int TAB_OFFSET_X = 380;
    /**
     * The constant TAB_OFFSET_Y.
     */
    public static final int TAB_OFFSET_Y = 497;
    /**
     * The constant TAB_HORIZONTAL_SPACING.
     */
    public static final int TAB_HORIZONTAL_SPACING = 10;
}
