package sk.stuba.fiit.martin.szabo.gymbro.window;

import javafx.fxml.FXML;
import javafx.scene.control.Label;

public class Controller{
    @FXML
    private Label welcomeText;

    @FXML
    protected void onHelloButtonClick(){
        welcomeText.setText("Welcome to JavaFX Application!");
    }
}